# Aegis-server

./: .gitignore  .gitmodules  Cargo.toml  README.md  SECURITY.md  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  local-ci.yml
AegisEditor/: README.md  package.json
Editor/map-editor/: Cargo.toml
Editor/map-editor/src/: canvas.rs  lib.rs
Editor/view/: README.md  copy_wasm_target.sh  index.html  package.json  tailwind.config.js  tailwind_watcher.sh  tsconfig.json
Editor/view/public/: style.css
Editor/view/public/scripts/: flying_box.js  flying_box.ts  main.js  main.ts  map_listeners.ts
Editor/view/public/scripts/pkg/: map_editor.d.ts  map_editor.js  map_editor_bg.js  map_editor_bg.wasm  map_editor_bg.wasm.d.ts  package.json
Editor/view/public/styles/: base.css  base.css.map  base.less  colors.less
Editor/view/src/: main.ts
Editor/view/src/components/: EditorNav.vue
Editor/view/src/router/: index.ts
Editor/view/src/views/: EditorView.vue
components/diplomacy/: Cargo.toml
data/: server.toml
data/config/weapons/: missiles.toml  shells.toml
data/databases_scripts/: server.sql
doc/: Home.md  Languages.md  Server.md  Versions.md
doc/core/: GameLoop.md  index.md
doc/csp/: index.md  v1.0.md
doc/csp/example/: README.md  csp.lua
doc/map/: Extensions.md  Map.md  Modules.md
doc/mods/: mods.md
doc/protocols/: CSP.md  SGP.md
doc/protocols/example/: README.md  csp.lua  start.lua
doc/protocols/headers/: csp.md  id.md  identity.md  length.md  method.md  reconnect.md  server.md  update.md  version.md
editor/: Cargo.toml
editor/aegis-editor/: Cargo.toml
editor/aegis-editor/src/: constants.rs  main.rs
editor/src/: lib.rs  mousemove.rs  ui.rs
editor/src/map/: mod.rs
modules/buildings/: Cargo.toml
modules/editor/: package.json
modules/editor/src/components/editor/entities/: SearchBar.vue
modules/editor/src/components/general/: Button.vue  ComplexTable.vue  RightSide.vue
modules/editor/src/stores/: editor.store.ts
modules/editor/src/views/: HomeView.vue
modules/editor/src/views/editor/: EntitiesView.vue
modules/map/: Cargo.toml  README.md
modules/map/MapEditor/map-editor/: Cargo.toml  LICENSE_MIT  README.md
modules/map/MapEditor/map-editor/src/: lib.rs
modules/map/assets/: world.json
modules/map/editor/: README.md  index.html  package.json  vite.config.ts
modules/map/editor/src/: App.vue
modules/map/editor/src/assets/: main.css
modules/map/editor/src/components/editor/: EditorNavbar.vue
modules/map/editor/src/components/general/: ComplexTable.vue  Dropdown.vue
modules/map/editor/src/router/: index.ts
modules/map/editor/src/stores/: entities.store.ts
modules/map/editor/src/views/editor/: EditorView.vue  EntitiesView.vue
modules/map/src/: errors.rs  exported.rs  lib.rs  mesh_builder.rs  regions.rs  save.rs
modules/map/src/extensions/: mod.rs
modules/map/src/generation/: biomes.rs  mod.rs  terrain.rs
modules/map/src/map/: exported.rs  mod.rs
modules/map/structure_example/: .profile.json
modules/map_renderer/: Cargo.toml
modules/map_renderer/src/: lib.rs
modules/market/: Cargo.toml
modules/resources/src/: coefficient.rs  lib.rs
modules/technology_tree/: Cargo.toml
modules/weapons/: Cargo.toml
modules/weapons/src/: bullets.rs  firearm.rs  lib.rs  missiles.rs  shells.rs  torpedo.rs
server/: Cargo.toml  README.md  build.rs  server.toml
server/src/: main.rs
server/src/api/: catchers.rs  mod.rs  responders.rs  websocket.rs
server/src/api/routes/: mod.rs  users.rs
server/src/core/: mod.rs  net.rs  systems.rs
server/src/database/: mod.rs  users.rs
test_log/: Cargo.toml
test_log/src/: main.rs
utils/csp/: Cargo.toml  README.md
utils/csp/src/: lib.rs  parser.rs  prelude.rs  queue.rs  traits.rs
utils/csp/src/v10/: mod.rs  spec.rs
utils/csp/tests/: client.rs  client_async.rs  server.rs  server_async.rs
utils/csp/tests/common/: mod.rs
utils/logs/: Cargo.toml
utils/logs/src/: fmt.rs  lib.rs  log.rs  rules.rs  runner.rs
utils/save/: Cargo.toml
