[workspace]
members = [
    "modules/buildings",
    "modules/database",
    "modules/diplomacy",
    "modules/map",
    "modules/market",
    "modules/resources",
    "modules/technology_tree",
    "modules/units",
    "modules/weapons",
    "utils/auth",
    "utils/logs",
    "utils/save",
    "server",
    "modules/map_renderer",
    "editor",
    "editor/aegis-editor"
]
resolver = "1"

[workspace.dependencies]
uuid = "1.7.0"
serde = "1.0.195"
serde_json = "1.0.111"
msgpack_simple = "1.0.2"
hashbrown = "0.14.3"
rand = "0.8.5"
bitflags = "2.4.2"
reqwest = "0.11.23"
regex = "1.10.3"
rmp-serde = "1.1.2"

tar = "0.4.40"
flate2 = "1.0.28"

smol = "2.0.0"

dotenv = "0.15.0"
toml = "0.8.8"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rocket = "0.5.0"
log = "0.4.20"

chrono = "0.4.34"

petgraph = "0.6.4"
bevy = "0.13.0"
