[workspace]
members = [
    "modules/buildings",
    "modules/database",
    "modules/diplomacy",
    "modules/map",
    "modules/market",
    "modules/resources",
    "modules/technology_tree",
    "modules/units",
    "modules/weapons",
    "utils/auth",
    "utils/logs",
    "utils/save",
    "server"
]
resolver = "1"

[workspace.dependencies]
uuid = "1.7.0"
serde = "1.0.195"
serde_json = "1.0.111"
rmp-serde = "1.1.2"
hashbrown = "0.14.3"
rand = "0.8.5"
bitflags = "2.4.2"
reqwest = "0.12.5"
regex = "1.10.3"

smol = "2.0.0"

dotenv = "0.15.0"
toml = "0.8.8"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rocket = "0.5.0"

petgraph = "0.6.4"

bevy = "0.14.0"
bevy_mod_outline = "0.8.1"

anyhow = "1.0.86"
thiserror = "1.0.63"