[workspace]
members = [
    "modules/buildings",
    "modules/database", "modules/diplomacy",
    "modules/map",
    "modules/market",
    "modules/resources",
    "modules/technology_tree",
    "modules/units",
    "modules/weapons",
    "utils/logs",
    "utils/save",
    "utils/csp",
    "server"
]
resolver = "1"

[workspace.dependencies]
uuid = "1.7.0"
serde = "1.0.195"
serde_json = "1.0.111"

# msgpack
rmp = "0.8.12"
rmp-serde = "1.1.2"

hashbrown = "0.14.3"
rand = "0.8.5"
bitflags = "2.4.2"
reqwest = "0.11.23"
regex = "1.10.3"

tokio = "1.40.0"
smol = "2.0.0"

dotenv = "0.15.0"
toml = "0.8.8"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rocket = "0.5.0"
rocket_ws = "0.1.1"

petgraph = "0.6.4"

# compression algorithm (gzip, deflate, lzip)
flate2 = "1.0.28"

# Server
rust-embed = "8.2.0"
clap = "4.4.18"

futures-channel = "0.3.31"

bevy_ecs = "0.14.2"
bevy_time = "0.14.2"
bevy_tasks = "0.14.2"
sha2 = "0.10.8"
sqlx = "0.8.2"
chrono = "0.4.38"
