[package]
name = "map-editor"
version = "0.1.0"
authors = ["lynn <cedriccolinc@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
map = { path = "../../modules/map", features = ["save"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
