[package]
name = "map-editor"
version = "0.1.0"
authors = ["lynn <cedriccolinc@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.84", features = ["default"]}
console_error_panic_hook = { version = "0.1.7", optional = true }
map = { path = "../../modules/map", features = ["save"] }
# Required because the `wasm*-unknown-unknown` targets are not supported by default.
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.7.0", features = ["v4"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    "console"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
