[package]
name = "map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
petgraph = { workspace = true, features = ["default", "serde", "serde_derive"] }
uuid = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }

image = { version = "0.24.9", features = ["png", "jpeg"] }

voronator = { version = "0.2.1", features = ["default", "rayon"] }

thiserror = "2.0.12"
