[package]
name = "csp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async
smol = { workspace = true }
# compression
flate2 = { workspace = true }
# msgpack
rmp = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"]}

[dev-dependencies]
# generating random data
rand = { workspace = true }