[package]
name = "logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { workspace = true }
once_cell = "1.19.0"
smol = { workspace = true }
crossbeam-channel = { workspace = true }
chrono = { workspace = true }

[features]
benchmark = []